[package]
name = "templater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
anyhow = "1"
handlebars = "4"
colorized = "1"
colored_json = "3"
config-finder = "0.1.2"
